# project-tmp-rep

./: .bashrc  README.md  main.py  project.py  pyproject.toml
.devcontainer/: devcontainer.json  extensions.txt
.devcontainer/.devcontainer/: Dockerfile
