[project]
name = "project-tmp-rep"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["lib-tmp-rep"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8"]
build-backend = "uv_build"


# [tool.uv]
# no-build-isolation-package = ["lib_tmp_rep"]

[tool.uv.sources]
lib_tmp_rep = { path = "../lib-tmp-rep" }
